--- a/snow_data_assignment.Rmd
+++ b/snow_data_assignment.Rmd
@@ -1,11 +1,11 @@
 ---
 title: "Snow Data Assignment: Web Scraping, Functions, and Iteration"
-author: "Nathan Mueller"
-date: "2-7-2022"
+author: "Quinn Miller"
+date: "`r format(Sys.time(), '%B %d, %Y')`"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
+```{r setup, warning=F,message=F, include =FALSE}
 library(rvest)
 library(tidyverse)
 library(lubridate)
@@ -18,40 +18,31 @@ library(readxl)
 
 R can read html using either rvest, xml, or xml2 packages. Here we are going to navigate to the Center for Snow and Avalance Studies  [Website](https://snowstudies.org/archived-data/) and read a table in. This table contains links to data we want to programatically download for three sites. We don't know much about these sites, but they contain incredibly rich snow, temperature, and precip data. 
 
+# Assignment:
 
-## Reading an html 
+1. Extract the meteorological data URLs. Here we want you to use the `rvest` package to get the URLs for the `SASP forcing` and `SBSP_forcing` meteorological datasets.
 
-### Extract CSV links from webpage
-
-```{r}
+```{r, echo=FALSE, message = FALSE}
+#Q1
 site_url <- 'https://snowstudies.org/archived-data/'
 
 #Read the web url
 webpage <- read_html(site_url)
 
-#See if we can extract tables and get the data that way
-tables <- webpage %>%
-  html_nodes('table') %>%
-  magrittr::extract2(3) %>%
-  html_table(fill = TRUE)
-#That didn't work, so let's try a different approach
-
-#Extract only weblinks and then the URLs!
-links <- webpage %>%
+meteor_links <- webpage %>%
   html_nodes('a') %>%
-  .[grepl('24hr',.)] %>%
+  .[grepl('Forcing_Data',.)] %>%
   html_attr('href')
 
 ```
 
-## Data Download
 
-### Download data in a for loop
+2. Download the meteorological data. Use the `download_file` and `str_split_fixed` commands to download the data and save it in your data folder. You can use a for loop or a map function. 
 
-```{r}
-
+```{r, echo=FALSE, message = FALSE}
+#Q2
 #Grab only the name of the file by splitting out on forward slashes
-splits <- str_split_fixed(links,'/',8)
+splits <- str_split_fixed(meteor_links,'/',8)
 
 #Keep only the 8th column
 dataset <- splits[,8] 
@@ -59,93 +50,20 @@ dataset <- splits[,8]
 #generate a file list for where the data goes
 file_names <- paste0('data/',dataset)
 
-for(i in 1:3){
-  download.file(links[i],destfile=file_names[i])
+for(i in 1:2){
+  download.file(meteor_links[i],destfile=file_names[i])
 }
 
 downloaded <- file.exists(file_names)
 
 evaluate <- !all(downloaded)
-
 ```
 
-
-### Download data in a map
-
-```{r}
-
-#Map version of the same for loop (downloading 3 files)
-if(evaluate == T){
-  map2(links[1:3],file_names[1:3],download.file)
-}else{print('data already downloaded')}
-
-```
-
-## Data read-in 
-
-### Read in just the snow data as a loop
-
-```{r}
-#Pattern matching to only keep certain files
-snow_files <- file_names %>%
-  .[!grepl('SG_24',.)] %>%
-  .[!grepl('PTSP',.)]
-
-#empty_data <- list()
-
-# snow_data <- for(i in 1:length(snow_files)){
-#   empty_data[[i]] <- read_csv(snow_files[i]) %>%
-#     select(Year,DOY,Sno_Height_M)
-# }
-
-#snow_data_full <- do.call('rbind',empty_data)
-
-#summary(snow_data_full)
-```
-
-
-### Read in the data as a map function
-
-```{r}
-
-our_snow_reader <- function(file){
-  name = str_split_fixed(file,'/',2)[,2] %>%
-    gsub('_24hr.csv','',.)
-  df <- read_csv(file) %>%
-    select(Year,DOY,Sno_Height_M) %>%
-    mutate(site = name)
-}
-
-snow_data_full <- map_dfr(snow_files,our_snow_reader)
-
-summary(snow_data_full)
-```
-
-
-### Plot snow data
-
-```{r}
-snow_yearly <- snow_data_full %>%
-  group_by(Year,site) %>%
-  summarize(mean_height = mean(Sno_Height_M,na.rm=T))
-
-ggplot(snow_yearly,aes(x=Year,y=mean_height,color=site)) + 
-  geom_point() +
-  ggthemes::theme_few() + 
-  ggthemes::scale_color_few()
-```
-
-
-# Assignment:
-
-1. Extract the meteorological data URLs. Here we want you to use the `rvest` package to get the URLs for the `SASP forcing` and `SBSP_forcing` meteorological datasets.
-
-2. Download the meteorological data. Use the `download_file` and `str_split_fixed` commands to download the data and save it in your data folder. You can use a for loop or a map function. 
 
 3. Write a custom function to read in the data and append a site column to the data. 
 
-```{r}
-
+```{r, echo=FALSE, message = FALSE}
+#Q3
 # this code grabs the variable names from the metadata pdf file
 library(pdftools)
 headers <- pdf_text('https://snowstudies.org/wp-content/uploads/2022/02/Serially-Complete-Metadata-text08.pdf') %>%
@@ -156,15 +74,103 @@ headers <- pdf_text('https://snowstudies.org/wp-content/uploads/2022/02/Serially
   .[1:26] %>%
   str_trim(side = "left")
 
+#function to read in data files, clean them, keep relevant columns
+data_reader <- function(file){
+  name = str_split_fixed(file,'/',2)[,2] %>%
+    gsub('_Forcing_Data.txt','',.)
+  df <- read_fwf(file)
+  names(df)<-c(headers[1:19])
+  df <- df %>%
+  select(-c(15:19)) %>%
+  mutate(site = name)%>%
+  mutate(DateTime = make_datetime(year, month, day, hour, minute, second))%>%
+  select(c(16,7,10,15))%>%
+  rename(precip_kgms=2, air_temp_K=3)
+}
+
 ```
 
 4. Use the `map` function to read in both meteorological files. Display a summary of your tibble.
 
+```{r, echo=FALSE, message = FALSE}
+#Q4
+meteor_data_full <- map_dfr(file_names,data_reader)
+
+summary(meteor_data_full)
+```
+
+
 5. Make a line plot of mean temp by year by site (using the `air temp [K]` variable). Is there anything suspicious in the plot? Adjust your filtering if needed.
+
+The first year on record (2003) only collected air temperature data from November and December, skewing the mean temp for that year downwards. After removing 2003 from the plot, the data appears to be spread much more evenly.
+
+```{r, echo=FALSE, message = FALSE}
+#Q5
+meteor_yearly <- meteor_data_full %>%
+  mutate(Year = year(DateTime)) %>%
+  group_by(Year,site) %>%
+  summarize(mean_temp = mean(air_temp_K,na.rm=T)) %>%
+  filter(Year >2003)
+
+ggplot(meteor_yearly,aes(x=Year,y=mean_temp,color=site)) + 
+  geom_point() +
+  ggthemes::theme_few() + 
+  ggthemes::scale_color_few()
+```
+
 
 6. Write a function that makes line plots of monthly average temperature at each site for a given year. Use a for loop to make these plots for 2005 to 2010. Are monthly average temperatures at the Senator Beck Study Plot ever warmer than the Snow Angel Study Plot?
 Hint: https://ggplot2.tidyverse.org/reference/print.ggplot.html
 
-Bonus: Make a plot of average daily precipitation by day of year (averaged across all available years). Color each site. 
+The graphs below show the monthly average temperatures from 2005 to 2010. The SASP site is consistently warmer than the SBSP site.
 
-Bonus #2: Use a function and for loop to create yearly plots of precipitation by day of year. Color each site. 
+```{r, echo=FALSE, message=FALSE}
+#Q6
+monthly_mapper <-function(df, year){
+  meteor_monthly <- df %>%
+  mutate(Year = year(DateTime)) %>%
+  mutate(Month= month(DateTime)) %>%
+  group_by(Year,Month,site) %>%
+  summarize(mean_temp = mean(air_temp_K,na.rm=T))%>%
+  filter(Year == year)  
+
+x =  ggplot(data = meteor_monthly,aes(x=Month,y=mean_temp,color=site)) + 
+  geom_line() +
+  ggthemes::theme_few() + 
+  ggthemes::scale_color_few()
+print(x)
+}
+
+for (i in 2005:2010){
+  monthly_mapper(meteor_data_full,i)
+}
+
+```
+
+
+Bonus: Make a plot of average daily precipitation by day of year (averaged across all available years).
+
+```{r, echo=FALSE, message=FALSE}
+#bonus
+meteor_daily<- meteor_data_full %>%
+  filter(site=="SBB_SASP")%>%
+  mutate(Month= month(DateTime))%>%
+  mutate(Day = day(DateTime)) %>%
+  group_by(Month,Day) %>%
+  summarize(mean_precip = mean(precip_kgms,na.rm=T))%>%
+  mutate(Date = paste(Month,Day,"2000"))
+
+meteor_daily$Date <-mdy(meteor_daily$Date)
+
+ggplot(data =meteor_daily, aes(x=Date, y=mean_precip))+
+  scale_x_date(date_breaks = "1 month", date_labels =  "%b")+
+  geom_line()+
+  ggthemes::theme_few()
+  
+```
+
+### Appendix
+
+```{r ref.label=knitr::all_labels(), echo=TRUE, eval=FALSE}
+
+```
